my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_switch_nested_case/ESYNTAX_switch_nested_case.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_switch_nested_case.dml:14:9: error ESYNTAX: syntax error at 'case'
